--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -36,9 +36,10 @@
             android:background="@drawable/button_selector"
             android:focusable="true"
             android:padding="5dp"
+            android:nextFocusDown="@id/exo_rew"
+            android:defaultFocusHighlightEnabled="true"
+            android:focusedByDefault="true"
             android:src="@mipmap/player_back_btn">
-
-            <requestFocus />
         </ImageButton>
 
 
@@ -145,6 +146,7 @@
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button_selector"
                     android:focusable="true"
+                    android:nextFocusDown="@id/exo_play"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
                 <TextView
@@ -166,6 +168,7 @@
                 android:background="@drawable/button_selector"
                 android:focusable="true"
                 android:padding="5dp"
+                android:nextFocusDown="@id/exo_ffwd"
                 android:src="@drawable/ic_balaji_pause" />
 
             <ImageView
@@ -202,6 +205,7 @@
                     android:layout_marginStart="10dp"
                     android:background="@drawable/button_selector"
                     android:focusable="true"
+                    android:nextFocusDown="@id/exo_progress"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
 
@@ -281,10 +285,11 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="10dp"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/button_selector"
                 android:focusable="true"
                 android:padding="5dp"
-                android:src="@drawable/ic_balaji_volume_on" />
+                android:src="@drawable/ic_balaji_volume_on"
+                android:nextFocusDown="@id/exo_volume_progress"/>
 
             <SeekBar
                 android:id="@+id/exo_volume_progress"
@@ -292,12 +297,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="40dp"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/button_selector"
                 android:focusable="true"
                 android:maxHeight="8dp"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
-                android:thumbOffset="0dp" />
+                android:thumbOffset="0dp"
+                android:nextFocusDown="@id/volumeUnMuteButton"/>
 
         </LinearLayout>
 
@@ -336,10 +342,11 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
-                    android:background="?attr/selectableItemBackground"
+                    android:background="@drawable/button_selector"
                     android:focusable="true"
                     android:padding="5dp"
-                    android:src="@drawable/ic_balaji_volume_on" />
+                    android:src="@drawable/ic_balaji_volume_on"
+                    android:nextFocusDown="@id/settings_btn"/>
 
 
                 <ImageView
@@ -412,7 +419,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="@drawable/button_selector"
         app:layout_constraintBottom_toBottomOf="@id/vvvvvvvvvv"
         app:layout_constraintEnd_toStartOf="@id/durationLinearLayout"
         app:layout_constraintStart_toEndOf="@+id/vvvvvvvvvv"
@@ -420,7 +427,9 @@
         app:previewAnimationEnabled="false"
         app:previewFrameLayout="@id/previewFrameLayout"
         app:scrubber_dragged_size="24dp"
-        app:scrubber_enabled_size="16dp" />
+        app:scrubber_enabled_size="16dp"
+        android:focusable="true"
+        android:nextFocusDown="@id/volumeFullScreenButton"/>
 
     <!--    <TextView-->
     <!--        android:id="@id/exo_duration"-->
