--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/button"
-            android:focusable="false"
+            android:focusable="true"
             android:padding="5dp"
             android:nextFocusDown="@id/exo_rew"
             android:defaultFocusHighlightEnabled="true"
@@ -145,7 +145,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
-                    android:focusable="false"
+                    android:focusable="true"
                     android:nextFocusDown="@id/exo_play"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
@@ -166,7 +166,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:nextFocusDown="@id/exo_ffwd"
                 android:src="@drawable/ic_balaji_pause" />
@@ -177,7 +177,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_play" />
 
@@ -204,7 +204,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
                     android:background="@drawable/button"
-                    android:focusable="false"
+                    android:focusable="true"
                     android:nextFocusDown="@id/exo_progress"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
@@ -261,7 +261,7 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
                 android:background="?attr/selectableItemBackground"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
@@ -286,7 +286,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/button"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_volume_on"
                 android:nextFocusDown="@id/exo_volume_progress"/>
@@ -298,7 +298,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="40dp"
                 android:background="@drawable/button"
-                android:focusable="false"
+                android:focusable="true"
                 android:maxHeight="8dp"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
@@ -343,7 +343,7 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
-                    android:focusable="false"
+                    android:focusable="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on"
                     android:nextFocusDown="@id/settings_btn"/>
@@ -356,7 +356,7 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
                     android:background="?attr/selectableItemBackground"
-                    android:focusable="false"
+                    android:focusable="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
@@ -371,7 +371,7 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/button"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_setting" />
 
@@ -392,7 +392,7 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
-                android:focusable="false"
+                android:focusable="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_fullscreen"
                 android:visibility="gone" />
@@ -428,7 +428,7 @@
         app:previewFrameLayout="@id/previewFrameLayout"
         app:scrubber_dragged_size="24dp"
         app:scrubber_enabled_size="16dp"
-        android:focusable="false"
+        android:focusable="true"
         android:nextFocusDown="@id/volumeFullScreenButton"/>
 
     <!--    <TextView-->
