--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
-    android:focusable="true"
     android:layoutDirection="ltr">
 
     <View
@@ -20,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:focusable="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -37,6 +35,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/button"
             android:focusable="true"
+            android:focusableInTouchMode="true"
             android:padding="5dp"
             android:nextFocusDown="@id/exo_rew"
             android:defaultFocusHighlightEnabled="true"
@@ -148,6 +147,7 @@
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
                     android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:nextFocusDown="@id/exo_play"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
@@ -169,6 +169,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:nextFocusDown="@id/exo_ffwd"
                 android:src="@drawable/ic_balaji_pause" />
@@ -180,6 +181,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_play" />
 
@@ -207,6 +209,7 @@
                     android:layout_marginStart="10dp"
                     android:background="@drawable/button"
                     android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:nextFocusDown="@id/exo_progress"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
@@ -264,6 +267,7 @@
                 android:layout_marginEnd="5dp"
                 android:background="?attr/selectableItemBackground"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
@@ -289,6 +293,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/button"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_volume_on"
                 android:nextFocusDown="@id/exo_volume_progress"/>
@@ -301,6 +306,7 @@
                 android:layout_marginEnd="40dp"
                 android:background="@drawable/button"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:maxHeight="8dp"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
@@ -346,6 +352,7 @@
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
                     android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on"
                     android:nextFocusDown="@id/settings_btn"/>
@@ -358,7 +365,6 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
                     android:background="?attr/selectableItemBackground"
-                    android:focusable="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
@@ -374,6 +380,7 @@
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/button"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_setting" />
 
@@ -395,6 +402,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
                 android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_fullscreen"
                 android:visibility="gone" />
@@ -431,6 +439,7 @@
         app:scrubber_dragged_size="24dp"
         app:scrubber_enabled_size="16dp"
         android:focusable="true"
+        android:focusableInTouchMode="true"
         android:nextFocusDown="@id/volumeFullScreenButton"/>
 
     <!--    <TextView-->
