--- a/app/src/main/res/layout/alt_balaji_tv_video_player.xml
+++ b/app/src/main/res/layout/alt_balaji_tv_video_player.xml
@@ -6,17 +6,18 @@
     android:id="@+id/frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <com.multitv.ott.multitvvideoplayer.videoplayer.MyVideoPlayer
         android:id="@+id/videoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:animation_enabled="false"
+        app:animation_enabled="true"
         android:focusable="true"
         app:controller_layout_id="@layout/alt_tv_player"
         app:resize_mode="fill" />
-
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/contentRateLayout"
@@ -67,7 +68,6 @@
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 
     <LinearLayout
         android:id="@+id/errorRetryLayout"
