--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -8,6 +8,12 @@
     android:layout_gravity="bottom"
     android:layoutDirection="ltr">
 
+    <View
+        android:id="@+id/overlayImageTransparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha=".6"
+        android:background="#CC212121" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +41,6 @@
             android:defaultFocusHighlightEnabled="true"
             android:focusedByDefault="true"
             android:src="@mipmap/player_back_btn">
-            <requestFocus />
         </ImageView>
 
 
@@ -72,6 +77,7 @@
             android:textSize="12sp"
             android:visibility="gone" />
     </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/midLayout"
@@ -134,7 +140,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                   android:id="@+id/exo_rew"
+                    android:id="@id/exo_rew"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
@@ -196,7 +202,7 @@
                     android:textSize="11sp" />
 
                 <ImageView
-                    android:id="@+id/exo_ffwd"
+                    android:id="@id/exo_ffwd"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
@@ -225,6 +231,7 @@
 
 
     </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/videoMenuLayout"
@@ -406,6 +413,7 @@
 
     </RelativeLayout>
 
+
     <TextView
         android:id="@id/vvvvvvvvvv"
         android:layout_width="wrap_content"
@@ -433,6 +441,21 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:nextFocusDown="@id/volumeFullScreenButton"/>
+
+    <!--    <TextView-->
+    <!--        android:id="@id/exo_duration"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="bottom"-->
+    <!--        android:layout_margin="8dp"-->
+    <!--        android:includeFontPadding="false"-->
+    <!--        android:textColor="#FFBEBEBE"-->
+    <!--        android:textSize="12sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        app:layout_constraintBaseline_toBaselineOf="@id/exo_position"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        tools:text="25:23" />-->
+
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/durationLinearLayout"
@@ -492,6 +515,7 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+
     <FrameLayout
         android:id="@+id/previewFrameLayout"
         android:layout_width="0dp"
@@ -517,5 +541,6 @@
             android:layout_margin="@dimen/video_frame_width"
             android:scaleType="fitXY" />
     </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
