--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -12,6 +12,7 @@
         android:id="@+id/overlayImageTransparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha=".6"
         android:background="#CC212121" />
 
     <RelativeLayout
@@ -39,7 +40,7 @@
             android:nextFocusDown="@id/exo_rew"
             android:defaultFocusHighlightEnabled="true"
             android:focusedByDefault="true"
-            android:src="@drawable/ic_balaji_backward_10_sec">
+            android:src="@mipmap/player_back_btn">
         </ImageView>
 
 
