--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -34,8 +34,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/button"
-            
-            
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:padding="5dp"
             android:nextFocusDown="@id/exo_rew"
             android:defaultFocusHighlightEnabled="true"
@@ -146,8 +146,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
-                    
-                    
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:nextFocusDown="@id/exo_play"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
@@ -168,8 +168,8 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:nextFocusDown="@id/exo_ffwd"
                 android:src="@drawable/ic_balaji_pause" />
@@ -180,8 +180,8 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_play" />
 
@@ -208,8 +208,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
                     android:background="@drawable/button"
-                    
-                    
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:nextFocusDown="@id/exo_progress"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
@@ -266,8 +266,8 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
                 android:background="?attr/selectableItemBackground"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
@@ -292,8 +292,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/button"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_volume_on"
                 android:nextFocusDown="@id/exo_volume_progress"/>
@@ -305,8 +305,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="40dp"
                 android:background="@drawable/button"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:maxHeight="8dp"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
@@ -351,8 +351,8 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/button"
-                    
-                    
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on"
                     android:nextFocusDown="@id/settings_btn"/>
@@ -379,8 +379,8 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/button"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_setting" />
 
@@ -401,8 +401,8 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
-                
-                
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_fullscreen"
                 android:visibility="gone" />
@@ -438,8 +438,8 @@
         app:previewFrameLayout="@id/previewFrameLayout"
         app:scrubber_dragged_size="24dp"
         app:scrubber_enabled_size="16dp"
-        
-        
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:nextFocusDown="@id/volumeFullScreenButton"/>
 
     <!--    <TextView-->
