--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -139,6 +139,7 @@
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
+                    android:focusable="true"
                     android:background="@drawable/button"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
@@ -191,6 +192,7 @@
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
+                    android:focusable="true"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
 
@@ -270,6 +272,7 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/button"
                 android:padding="5dp"
+                android:focusable="true"
                 android:src="@drawable/ic_balaji_volume_on" />
 
             <SeekBar
@@ -347,6 +350,7 @@
                 android:layout_marginRight="5dp"
                 android:background="@drawable/button"
                 android:padding="5dp"
+                android:focusable="true"
                 android:src="@drawable/ic_balaji_setting" />
 
             <ImageView
@@ -366,6 +370,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
                 android:padding="5dp"
+                android:focusable="true"
                 android:src="@drawable/ic_balaji_fullscreen" />
 
 
