--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -88,7 +88,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/button"
+            android:background="@android:color/transparent"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:src="@drawable/lock"
@@ -100,7 +100,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/button"
+            android:background="@android:color/transparent"
             android:src="@drawable/unlock"
             android:visibility="gone" />
 
@@ -121,7 +121,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:src="@drawable/pervious"
                 android:visibility="gone" />
 
@@ -139,8 +139,7 @@
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
-                    android:focusable="true"
-                    android:background="@drawable/button"
+                    android:background="@android:color/transparent"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
                 <TextView
@@ -192,7 +191,6 @@
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
-                    android:focusable="true"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
 
@@ -246,7 +244,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
@@ -258,7 +256,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
                 android:src="@drawable/next_epsode"
                 android:visibility="gone" />
@@ -270,9 +268,8 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
-                android:focusable="true"
                 android:src="@drawable/ic_balaji_volume_on" />
 
             <SeekBar
@@ -304,7 +301,7 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:src="@drawable/speed"
                 android:visibility="gone" />
 
@@ -323,7 +320,7 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
-                    android:background="@drawable/button"
+                    android:background="@android:color/transparent"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on" />
 
@@ -334,7 +331,7 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
-                    android:background="@drawable/button"
+                    android:background="@android:color/transparent"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
@@ -348,9 +345,8 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
-                android:focusable="true"
                 android:src="@drawable/ic_balaji_setting" />
 
             <ImageView
@@ -359,7 +355,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_pip" />
 
@@ -368,9 +364,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
-                android:background="@drawable/button"
+                android:background="@android:color/transparent"
                 android:padding="5dp"
-                android:focusable="true"
                 android:src="@drawable/ic_balaji_fullscreen" />
 
 
